<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:background="@color/colorAccent"
    tools:context=".activities.TeamMemberActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/backButton"
            android:layout_width="111dp"
            android:layout_height="match_parent"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toStartOf="@+id/infoButton" />

        <Button
            android:id="@+id/infoButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/info"
            android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6" />

        <Button
            android:id="@+id/teamsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/teams"
            android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/chatButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/chat"
            android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent" />


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/membersRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/membersRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>